[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/splash.gd" type="Script" id=1]
[ext_resource path="res://sprites/ship.png" type="Texture" id=2]
[ext_resource path="res://sprites/weight.png" type="Texture" id=3]
[ext_resource path="res://fonts/PressStart2P.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/title.gd" type="Script" id=5]
[ext_resource path="res://sprites/starfield512x512.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 6
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 6
outline_color = Color( 0.666667, 0.666667, 0.666667, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 6
font_data = ExtResource( 4 )

[node name="splash" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="player" type="Sprite" parent="."]
position = Vector2( 160, 75 )
texture = ExtResource( 2 )
vframes = 2

[node name="weight" type="Sprite" parent="."]
texture = ExtResource( 3 )
vframes = 2

[node name="footer" type="Label" parent="."]
margin_top = 158.0
margin_right = 320.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="vbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="hbox_title" type="HBoxContainer" parent="vbox"]
margin_top = 29.0
margin_right = 320.0
margin_bottom = 45.0
alignment = 1

[node name="title" type="Label" parent="vbox/hbox_title"]
margin_left = 104.0
margin_right = 216.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Hollows"
script = ExtResource( 5 )

[node name="hbox_spacer1" type="HBoxContainer" parent="vbox"]
margin_top = 65.0
margin_right = 320.0
margin_bottom = 65.0
alignment = 1

[node name="hbox_spacer2" type="HBoxContainer" parent="vbox"]
margin_top = 85.0
margin_right = 320.0
margin_bottom = 85.0
alignment = 1

[node name="hbox_start" type="HBoxContainer" parent="vbox"]
editor/display_folded = true
margin_top = 105.0
margin_right = 320.0
margin_bottom = 119.0
alignment = 1

[node name="start_button" type="Button" parent="vbox/hbox_start"]
margin_left = 134.0
margin_right = 186.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Start"

[node name="hbox_controls" type="HBoxContainer" parent="vbox"]
margin_top = 139.0
margin_right = 320.0
margin_bottom = 151.0
custom_constants/separation = 10
alignment = 1

[node name="fx_button" type="Button" parent="vbox/hbox_controls"]
margin_left = 51.0
margin_right = 93.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "FX ON"

[node name="music_button" type="Button" parent="vbox/hbox_controls"]
margin_left = 103.0
margin_right = 169.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Music OFF"

[node name="skip_button" type="Button" parent="vbox/hbox_controls"]
margin_left = 179.0
margin_right = 269.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
text = "Skip training"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
offset = Vector2( 160, 90 )
transform = Transform2D( 1, 0, 0, 1, 160, 90 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( -256, -128 )
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 512, 396 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 6 )

[connection signal="pressed" from="vbox/hbox_start/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="vbox/hbox_controls/fx_button" to="." method="_on_fx_button_pressed"]
[connection signal="pressed" from="vbox/hbox_controls/music_button" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="vbox/hbox_controls/skip_button" to="." method="_on_skip_button_pressed"]
